@@ -212,16 +212,6 @@
            <widget class="ScrobblingStatus" name="scrobblingStatus"/>
           </item>
           <item>
-          <widget class="ToolButton" name="streamPlayButton">
-           <property name="checkable">
-            <bool>true</bool>
-           </property>
-           <property name="checked">
-            <bool>false</bool>
-           </property>
-          </widget>
-          </item>
-          <item>
            <widget class="SpacerWidget" name="leftSpacer" native="true"/>
           </item>
           <item>
